--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -8,7 +8,7 @@ on:
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  IMAGE_NAME: tuzuka/laravel-app2
+  IMAGE_NAME: quybatuoc912/laravel-app2
   TAG: latest
 
 jobs:
